Fix translate layout issues on smaller screen

--- a/transforms/css/translate.css
+++ b/transforms/css/translate.css
@@ -20,13 +20,15 @@
 }
 
 .rotate-cube {
-  transform: translate3d(100px, 0, 0) rotate3d(0.5, 1, 1, 55deg);
+  transform: rotate3d(0.5, 1, 1, 55deg);
   transform-style: preserve-3d;
   transition: all 0.75s ease;
+  width: 250px;
+  height: 250px;
 }
 
 .rotate-cube:hover {
-  transform: translate3d(-100px, 100px, 0) rotate3d(1.5, 0.25, 1, -55deg);
+  transform: translate3d(-100px, 0px, 0) rotate3d(1.5, 0.25, 1, -55deg);
   transform-style: preserve-3d;
   transition: all 0.75s ease;
 }
